Added new party capability with validators

--- a/party_app/templates/base.html
+++ b/party_app/templates/base.html
@@ -14,6 +14,12 @@
        >
         My parties
     </a>
+    <a href="{{ url_for('new_party_form_page') }}"
+       class="inline-block p-4 text-custom-powder-light font-dancing-script text-2xl"
+       >
+        New party
+    </a>
+
 </nav>
 <main class="container p-5 m-auto">
     {% block content %}
