--- a/party_app/templates/new_party/page_new_party.html
+++ b/party_app/templates/new_party/page_new_party.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{#
+TODO: Validators doesn't reset errors after correct values filled-in
+#}
 {% block content %}
 <div id="new-party-form" class="max-w-6xl mx-auto">
     <section class="drop-shadow-lg my-10 p-6 bg-white rounded-lg">
