--- a/party_app/templates/party_list/page_party_list.html
+++ b/party_app/templates/party_list/page_party_list.html
@@ -13,7 +13,9 @@
                 <a href="{{ url_for('party_detail_page', party_id=party.uuid) }}"
                    class="text-custom-blue hover:text-custom-blue-light mr-4"
                 >Party details</a>
-                <a href="" class="text-custom-blue hover:text-custom-blue-light mr-4">Gift registry</a>
+                <a href="{{ url_for('gift_registry_page', party_id=party.uuid) }}"
+                   class="text-custom-blue hover:text-custom-blue-light mr-4"
+                >Gift registry</a>
                 <a href="" class="text-custom-blue hover:text-custom-blue-light mr-4">Guest list</a>
             </div>
         </div>
