--- a/party_app/templates/gift_registry/page_gift_registry.html
+++ b/party_app/templates/gift_registry/page_gift_registry.html
@@ -18,5 +18,15 @@
             {% endfor %}
         </div>
     </div>
+<div class="bg-gray-50 py-4 px-6 text-center">
+    <button class="uppercase text-sm text-gray-700 cursor-pointer"
+            type="button"
+            hx-target="#gift-registry .table-row-group"
+            hx-swap="beforeend"
+            hx-get="{{ url_for('gift_create_partial', party_id=party.uuid) }}"
+    >
+        Add gift
+    </button>
+</div>
 </div>
 {% endblock %}
