--- a/party_app/templates/party_list/page_party_list.html
+++ b/party_app/templates/party_list/page_party_list.html
@@ -16,7 +16,9 @@
                 <a href="{{ url_for('gift_registry_page', party_id=party.uuid) }}"
                    class="text-custom-blue hover:text-custom-blue-light mr-4"
                 >Gift registry</a>
-                <a href="" class="text-custom-blue hover:text-custom-blue-light mr-4">Guest list</a>
+                <a href="{{ url_for('guest_list_page', party_id=party.uuid) }}"
+                   class="text-custom-blue hover:text-custom-blue-light mr-4"
+                >Guest list</a>
             </div>
         </div>
         {% else %}
